# latent-class-conditional-logit

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/conditional_logit/: index.html
api/cross_validation/: index.html
api/latent_class/: index.html
api/specification/: index.html
docs/: fractional_response_hessian_sympy.py  index.md
docs/api/: conditional_logit.md  cross_validation.md  latent_class.md  specification.md
docs/tutorials/: cross_validation.md  estimation.md  printout_wtp.txt
lcl/: __init__.py  _case_utils.py  _choice_model.py  _demographics.py  _em_alg_startup.py  _em_alg_steps.py  _optimize.py  _prediction.py  _results.py  _struct.py  _wip_cross_validation.py  conditional_logit.py  latent_class_conditional_logit.py  sample_docstring  utils.py
search/: search_index.json
src/lcl/: __init__.py  _case_utils.py  _choice_model.py  _cross_validation.py  _demographics.py  _diagnostics.py  _em_alg_startup.py  _em_alg_steps.py  _em_alg_steps_old.py  _encoding.py  _jax_compat.py  _kernels.py  _logging.py  _optimize.py  _optimize_old.py  _prediction.py  _results.py  _struct.py  _wip_cross_validation.py  conditional_logit.py  constraints.py  latent_class_conditional_logit.py  latent_class_conditional_logit_old.py  spec.py  utils.py
stylesheets/: extra.css
tests/: test_imports.py  test_likelihood_numerics.py
tutorials/cross_validation/: index.html
tutorials/estimation/: index.html
