[project]
name = "lcl-choice"
version = "0.1.1"
description = "A high-performance Python package for estimating latent-class conditional logit models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Andrew", email = "your.email@example.com" },
  { name = "[Spouse's Name]", email = "her.email@example.com" }
]

dependencies = [
    "jax>=0.4.0",
    "polars>=0.20.0",
    "jaxtyping>=0.2.25",
    "beartype>=0.17.0",
    "jaxopt>=0.8.5",
    "equinox>=0.13.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lcl"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]