[project]
name = "lcl-choice"
version = "0.1.16"
description = "A high-performance Python package for estimating latent-class conditional logit models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "Andrew Zeyveld", email = "zeyveld@gmail.com" },
  { name = "Anna Jeffries", email = "" }
]

dependencies = [
    "jax>=0.4.0",
    "polars>=0.20.0",
    "jaxtyping>=0.2.25",
    "beartype>=0.17.0",
    "jaxopt>=0.8.5",
    "equinox>=0.13.6",
    "formulaic>=1.2.1",
    "pylatexenc>=2.10",
    "tabulate>=0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lcl"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
docs = [
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]
